# usersman_stable

./: #Cargo.toml#  Cargo.toml  yarte.toml
src/: Untitled1.ipynb  config.rs  errors.rs  lib.rs  main.rs  templ.rs
src/content/: db.rs  handlers.rs  mod.rs  models.rs
src/mail/: email_service.rs  mod.rs  model.rs  send_mail.rs
src/media/: upload.rs
src/pages/: db.rs  handlers.rs~  mod.rs  models.rs  models.rs~
templates/: index.html  index.org  user.html
templates/bare/: base.html  main.html  skel.css  skel.css~
templates/consul/: about.html  contact.html  index (copy 1).html  index.html  index_backup.html  news-single.html  news.html  services.html
templates/consul/css/: style.css  style.css.map  style.css_old
templates/consul/js/: script.js
templates/consul/php/: form-process.php
templates/consul/sass/: components.scss  footer.scss  global.css  global.scss  logo-nav.scss  section.scss  style.scss  variable.scss
templates/includes/: message.html
templates/layouts/: base.html
templates/pages/: about.html  about.html~  blog.html  blog.html~  contact.html  contact.html~  default.html~  index.html  index.html~  layout.html  main.html  me.html  menus.html  not_found.html  page.html  page.html~  register.hbs  register.html  sign_in.hbs  sign_in.html  user.html
